--- a/.github/actions/build-dev-builder-images/action.yml
+++ b/.github/actions/build-dev-builder-images/action.yml
@@ -33,15 +33,15 @@ inputs:
     required: false
     default: latest
   build-dev-builder-ubuntu:
-    describtion: Build dev-builder-ubuntu image
+    description: Build dev-builder-ubuntu image
     required: false
     default: 'true'
   build-dev-builder-centos:
-    describtion: Build dev-builder-centos image
+    description: Build dev-builder-centos image
     required: false
     default: 'true'
   build-dev-builder-android:
-    describtion: Build dev-builder-android image
+    description: Build dev-builder-android image
     required: false
     default: 'true'
 runs:
@@ -89,7 +89,7 @@ runs:
           --dest-creds "${{ inputs.acr-image-registry-username }}":"${{ inputs.acr-image-registry-password }}" \
           docker://${{ inputs.acr-image-registry }}/${{ inputs.acr-image-namespace }}/dev-builder-centos:${{ inputs.version }}
 
-    - name: Build and push dev-builder-android image # Only build amd64 platform.
+    - name: Build and push dev-builder-android image # Only build image for amd64 platform.
       shell: bash
       if: ${{ inputs.build-dev-builder-android == 'true' }}
       run:
@@ -99,6 +99,8 @@ runs:
           IMAGE_NAMESPACE=${{ inputs.dockerhub-image-namespace }} \
           IMAGE_TAG=${{ inputs.version }} && \
         
+        docker push ${{ inputs.dockerhub-image-registry }}/${{ inputs.dockerhub-image-namespace }}/dev-builder-android:${{ inputs.version }} && \
+
         skopeo copy -a docker://docker.io/${{ inputs.dockerhub-image-namespace }}/dev-builder-android:${{ inputs.version }} \
           --dest-creds "${{ inputs.acr-image-registry-username }}":"${{ inputs.acr-image-registry-password }}" \
           docker://${{ inputs.acr-image-registry }}/${{ inputs.acr-image-namespace }}/dev-builder-android:${{ inputs.version }}
