ci: update opts defaule values

--- a/.github/workflows/release-dev-builder-images.yaml
+++ b/.github/workflows/release-dev-builder-images.yaml
@@ -9,27 +9,17 @@ on:
         default: latest
       release_dev_builder_ubuntu_image:
         type: boolean
-        description: Release dev-builder-ubuntu images
+        description: Release dev-builder-ubuntu image
         required: false
         default: false
       release_dev_builder_centos_image:
         type: boolean
-        description: Release dev-builder-centos images
+        description: Release dev-builder-centos image
         required: false
         default: false
       release_dev_builder_android_image:
         type: boolean
-        description: Release dev-builder-android images
-        required: false
-        default: false
-      release_dev_builder_images_cn:
-        type: boolean
-        description: Release dev-builder images to CN region
-        required: false
-        default: false
-      disable_building_images:
-        type: boolean
-        description: Disable building images
+        description: Release dev-builder-android image
         required: false
         default: false
 
@@ -54,14 +44,16 @@ jobs:
           build-dev-builder-centos: ${{ inputs.release_dev_builder_centos_image }}
           build-dev-builder-android: ${{ inputs.release_dev_builder_android_image }}
 
-  release-dev-builder-images-cn:
+  release-dev-builder-images-cn: # Note: Be careful issue: https://github.com/containers/skopeo/issues/1874 and we decide to use the latest stable skopeo container.
     name: Release dev builder images to CN region
     runs-on: ubuntu-latest
-    if: ${{ inputs.release_dev_builder_images_cn }}
+    needs: [
+      release-dev-builder-images
+    ]
     steps:
       - name: Push dev-builder-ubuntu image
         shell: bash
-        if: ${{ inputs.release_dev_builder_ubuntu_image || inputs.disable_building_images }}
+        if: ${{ inputs.release_dev_builder_ubuntu_image }}
         env:
           DST_REGISTRY_USERNAME: ${{ secrets.ALICLOUD_USERNAME }}
           DST_REGISTRY_PASSWORD: ${{ secrets.ALICLOUD_PASSWORD }}
@@ -72,7 +64,7 @@ jobs:
 
       - name: Push dev-builder-centos image
         shell: bash
-        if: ${{ inputs.release_dev_builder_centos_image || inputs.disable_building_images }}
+        if: ${{ inputs.release_dev_builder_centos_image }}
         env:
           DST_REGISTRY_USERNAME: ${{ secrets.ALICLOUD_USERNAME }}
           DST_REGISTRY_PASSWORD: ${{ secrets.ALICLOUD_PASSWORD }}
@@ -83,7 +75,7 @@ jobs:
 
       - name: Push dev-builder-android image
         shell: bash
-        if: ${{ inputs.release_dev_builder_android_image || inputs.disable_building_images }}
+        if: ${{ inputs.release_dev_builder_android_image }}
         env:
           DST_REGISTRY_USERNAME: ${{ secrets.ALICLOUD_USERNAME }}
           DST_REGISTRY_PASSWORD: ${{ secrets.ALICLOUD_PASSWORD }}
